--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ h2 {
 .game-container {
     background-color: #fff;
     border: 5px solid palevioletred;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 20px;
     width: 90vw;
     max-width: 850px;
@@ -146,7 +146,19 @@ h2 {
         font-size: 1.5rem;
     }
 
+    .scoreDisplay {
+        font-size: 1rem;
+    }
+
     .scores {
         font-size: 1.2rem;
+    }
+
+    .game-container {
+        max-height: 600px;
+    }
+
+    .game {
+        max-height: 650px;
     }
 }
