--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ h2 {
 }
 
 .game-container {
-    background-color: #fff;
+    background-color: rgb(221, 178, 193);
     border: 5px solid palevioletred;
     border-radius: 10px;
     padding: 20px;
