--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,8 @@ h2 {
     }
 
     #resultDisplay {
-        font-size: 1.5rem;
+        font-size: 1rem;
+        margin-bottom: 5px;
     }
 
     #playerDisplay, #computerDisplay {
