--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ body{
     flex-direction: column;
     align-items: center;
 }
+
+body {
+    background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 20 20' fill='pink' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='10' cy='10' r='3'/%3E%3C/svg%3E");
+    background-repeat: repeat;
+}
+
 h1{
     font-size: 3.5rem;
     color: hsl(0, 0%, 20%);
